--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "frontend-mentor-todo-list-app",
+  "name": "todo-list-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "framer-motion": "^6.3.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.1",
+    "@reduxjs/toolkit": "^1.8.3",
+    "framer-motion": "^6.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,9 +40,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.0",
-    "nanoid": "^3.1.30",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.7"
+    "autoprefixer": "^10.4.7",
+    "nanoid": "^4.0.0",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   }
 }
